# Backend

./: .env_example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: oauth2.py
app/api/: urls.py
app/api/v1/: auth.py  users.py  vocabulary.py
app/core/: settings.py
app/db/: session.py
app/internal/: admin.py  provider.py
app/models/: __init__.py  users.py  vocabulary.py
app/schemas/: users.py  vocabulary.py
app/services/: crud_base.py  users.py  vocabulary.py
app/utils/: auth.py
migrations/: env.py
migrations/versions/: 4326b390ef0c_init_1.py  5eee8e7593a1_memes.py  62a583f961a7_remove_gender_from_user.py  6ac73b717bda_init.py  6c2cb85e79bb_init_2.py  9173b12178b8_indexes_for_memehistory.py  c527e5ba10cd_added_vocabulary.py  d21059b91552_email_nullable.py  f9337c273ebb_init_3.py
src/: dependencies.py  oauth2.py
src/api/: urls.py
src/api/v1/: auth.py  memes.py  users.py  vocabulary.py
src/core/: paginator.py  settings.py
src/db/: session.py
src/internal/: admin.py  provider.py
src/models/: memes.py  users.py  vocabulary.py
src/schemas/: memes.py  users.py  vocabulary.py
src/services/: crud_base.py  memes.py  users.py  vocabulary.py
src/utils/: auth.py  generate_fixtures.py
